# MobileDevelopment2025

./: .gitignore  README.md
HN_reader/: ContentView.swift  HN_readerApp.swift  MainTabView.swift
HN_reader.xcodeproj/: project.pbxproj
HN_reader/Models/: Comments.swift  FilterSortEnum.swift  News.swift  User.swift
HN_reader/Services/: APIService.swift  AppState.swift  FilterFavoritesService.swift  FilterSortIconService.swift  FilterSortNewsService.swift  LoginRegisterService.swift
HN_reader/Views/Account/: AccountView.swift
HN_reader/Views/Auth/: AuthView.swift
HN_reader/Views/Comments/: CommentsRowView.swift  CommentsView.swift
HN_readerTests/: HN_readerTests.swift
HN_readerUITests/: HN_readerUITests.swift  HN_readerUITestsLaunchTests.swift
backend/: README.md  compose.yml  pyproject.toml
backend/app/: main.py  models.py  repository.py
backend/app/db/: session.py
backend/app/task_manager/: hn_client.py  scheduler.py  tasks.py  utils.py
backend/hnreader/: manage.py  requirements.txt
backend/hnreader/app/: celery_worker.py  main.py  models.py  repository.py
backend/hnreader/app/db/: session.py
backend/hnreader/app/task_manager/: hn_client.py  tasks.py  utils.py
backend/hnreader/feed/: views.py
backend/hnreader/hnreader/: asgi.py  settings.py  urls.py  wsgi.py
backend/hnreader/task_manager/: hn_client.py  utils.py
backend/hnreader/tests/: test_httpx_tooling.py
backend/lr2/: report.md  task1.py
backend/lr3/: report.md
backend/mock/: db.json  package.json
backend/tests/: test_httpx_tooling.py
docs/: system.md
(+14 files in other folders)
